chore(site): enable minify flag

--- a/packages/site/wrangler.toml
+++ b/packages/site/wrangler.toml
@@ -4,6 +4,7 @@ name = "discohook-site"
 main = "./build/index.js"
 compatibility_date = "2023-04-20"
 node_compat = true
+minify = true
 
 kv_namespaces = [
   { binding = "KV", id = "29967d1631d24846a448e8d2bcc49a5b", preview_id = "03d176ba6dbd4a2daa2f63f9f8f8bb4b" },
