--- a/packages/magic-backup-importer/package.json
+++ b/packages/magic-backup-importer/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "remix build",
     "deploy": "wrangler deploy",
+    "deploy-preview": "wrangler deploy --env=preview",
     "dev": "remix dev --manual -c \"npm start\"",
     "start": "wrangler dev ./build/index.js --port=8789 --persist-to=../../persistence",
     "typecheck": "tsc"
