--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
   "private": true,
   "scripts": {
     "dev:bot": "cd packages/bot && npm run dev",
-    "ngrok:bot": "ngrok http 8787",
     "bot-ws": "cd packages/bot-ws && npm run bot",
     "dev:site": "cd packages/site && npm run dev",
     "dev:backups": "cd packages/magic-backup-importer && npm run dev",
-    "ngrok:site": "ngrok http 8788",
     "format": "biome format . --write",
     "lint": "biome lint . --apply",
     "fix": "biome check --apply .",
@@ -25,8 +23,7 @@
   ],
   "devDependencies": {
     "@biomejs/biome": "^1.5.1",
-    "drizzle-kit": "^0.22.8",
-    "ngrok": "^5.0.0-beta.2"
+    "drizzle-kit": "^0.22.8"
   },
   "packageManager": "yarn@4.1.0"
 }
