refactor(bot): use service binding to request data

--- a/packages/bot/wrangler.toml
+++ b/packages/bot/wrangler.toml
@@ -5,6 +5,7 @@ node_compat = true
 kv_namespaces = [
   { binding = "KV", id = "29967d1631d24846a448e8d2bcc49a5b", preview_id = "03d176ba6dbd4a2daa2f63f9f8f8bb4b" },
 ]
+services = [{ binding = "SITE", service = "discohook-site" }]
 
 [vars]
 ENVIRONMENT = "dev"
