--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^18.2.0",
     "react-emoji-search": "^2.2.26",
     "react-i18next": "^14.0.5",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-modal": "^3.16.1",
     "react-select": "^5.8.0",
     "remix-auth-discord": "^1.3.3",
@@ -64,6 +65,7 @@
     "@types/react": "^18.2.20",
     "@types/react-color": "^3.0.10",
     "@types/react-dom": "^18.2.7",
+    "@types/react-lazy-load-image-component": "^1.6.4",
     "@types/react-modal": "^3.16.3",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.1.6",
