--- a/packages/site/wrangler.toml
+++ b/packages/site/wrangler.toml
@@ -58,6 +58,9 @@ services = [
   { binding = "BOT", service = "discohook-bot-preview" },
 ]
 
+[env.preview.version_metadata]
+binding = "VERSION"
+
 [env.preview.durable_objects]
 bindings = [
   { name = "SCHEDULER", class_name = "DurableScheduler" },
@@ -92,6 +95,9 @@ services = [
   { binding = "CDN", service = "discohook-cdn", entrypoint = "UploaderService" },
   { binding = "BOT", service = "discohook-bot" },
 ]
+
+[env.production.version_metadata]
+binding = "VERSION"
 
 [env.production.durable_objects]
 bindings = [
