--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "build": "remix build",
-    "deploy": "wrangler deploy --minify",
+    "deploy": "wrangler deploy --env=production --minify",
     "deploy-preview": "wrangler deploy --env=preview --minify",
     "dev": "remix dev --manual -c \"npm start\"",
     "start": "wrangler dev ./build/index.js --ip=0.0.0.0 --port=8788 --persist-to=../../persistence",
