--- a/packages/bot/wrangler.toml
+++ b/packages/bot/wrangler.toml
@@ -71,3 +71,6 @@ DISCORD_APPLICATION_ID = "792842038332358656"
 PREMIUM_SKUS = ["1249810125418397867"]
 LIFETIME_SKU = "1266826214807572542"
 DISCOHOOK_ORIGIN = "https://discohook.app"
+GUILD_ID = "668218342779256857"
+DONATOR_ROLE_ID = "747100568539103242"
+SUBSCRIBER_ROLE_ID = "1251181202518315210"
