--- a/packages/bot/wrangler.toml
+++ b/packages/bot/wrangler.toml
@@ -16,11 +16,16 @@ LIFETIME_SKU = "1266826214807572542"
 bindings = [
   { name = "COMPONENTS", class_name = "DurableComponentState" },
   { name = "DRAFT_CLEANER", class_name = "DurableDraftComponentCleaner", script_name = "discohook-site" },
+  { name = "SHARE_LINKS", class_name = "ShareLinks", script_name = "discohook-site" },
 ]
 
 [[migrations]]
 tag = "v1"
-new_classes = ["DurableComponentState"]
+new_classes = ["DurableComponentState", "DurableDraftComponentCleaner"]
+
+[[migrations]]
+tag = "v2"
+new_classes = ["ShareLinks"]
 
 [env.preview]
 route = { pattern = "bots.preview.discohook.app", custom_domain = true }
@@ -34,11 +39,16 @@ services = [{ binding = "SITE", service = "discohook-site-preview" }]
 bindings = [
   { name = "COMPONENTS", class_name = "DurableComponentState" },
   { name = "DRAFT_CLEANER", class_name = "DurableDraftComponentCleaner", script_name = "discohook-site-preview" },
+  { name = "SHARE_LINKS", class_name = "ShareLinks", script_name = "discohook-site-preview" },
 ]
 
 [[env.preview.migrations]]
 tag = "v1"
-new_classes = ["DurableComponentState"]
+new_classes = ["DurableComponentState", "DurableDraftComponentCleaner"]
+
+[[env.preview.migrations]]
+tag = "v2"
+new_classes = ["ShareLinks"]
 
 [env.preview.vars]
 ENVIRONMENT = "preview"
@@ -59,11 +69,16 @@ services = [{ binding = "SITE", service = "discohook-site-production" }]
 bindings = [
   { name = "COMPONENTS", class_name = "DurableComponentState" },
   { name = "DRAFT_CLEANER", class_name = "DurableDraftComponentCleaner", script_name = "discohook-site-production" },
+  { name = "SHARE_LINKS", class_name = "ShareLinks", script_name = "discohook-site-production" },
 ]
 
 [[env.production.migrations]]
 tag = "v1"
-new_classes = ["DurableComponentState"]
+new_classes = ["DurableComponentState", "DurableDraftComponentCleaner"]
+
+[[env.production.migrations]]
+tag = "v2"
+new_classes = ["ShareLinks"]
 
 [env.production.vars]
 ENVIRONMENT = "production"
