--- a/packages/site/wrangler.toml
+++ b/packages/site/wrangler.toml
@@ -37,7 +37,11 @@ new_classes = [
 
 [[migrations]]
 tag = "v2"
-new_classes = ["RateLimiter", "ShareLinks"]
+new_classes = ["RateLimiter"]
+
+[[migrations]]
+tag = "v3"
+new_classes = ["ShareLinks"]
 
 [site]
 bucket = "./public"
@@ -87,7 +91,11 @@ new_classes = [
 
 [[env.preview.migrations]]
 tag = "v2"
-new_classes = ["RateLimiter", "ShareLinks"]
+new_classes = ["RateLimiter"]
+
+[[env.preview.migrations]]
+tag = "v3"
+new_classes = ["ShareLinks"]
 
 [env.preview.vars]
 ENVIRONMENT = "preview"
@@ -131,7 +139,11 @@ new_classes = [
 
 [[env.production.migrations]]
 tag = "v2"
-new_classes = ["RateLimiter", "ShareLinks"]
+new_classes = ["RateLimiter"]
+
+[[env.production.migrations]]
+tag = "v3"
+new_classes = ["ShareLinks"]
 
 [env.production.vars]
 ENVIRONMENT = "production"
