--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -7,6 +7,9 @@
   "license": "MIT",
   "private": true,
   "type": "module",
+  "scripts": {
+    "snowflake": "node ./scripts/snowflake.js"
+  },
   "dependencies": {
     "@upstash/redis": "^1.34.3",
     "discord-api-types": "^0.37.92",
