--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -49,7 +49,7 @@
     "react-lazy-load-image-component": "^1.6.2",
     "react-modal": "^3.16.1",
     "react-select": "^5.8.0",
-    "remix-auth-discord": "^1.3.3",
+    "remix-auth-discord": "discohook/remix-auth-discord",
     "remix-auth-guilded": "^1.0.1",
     "remix-utils": "^7.6.0",
     "robots-parser": "^3.0.1",
