--- a/packages/bot/wrangler.toml
+++ b/packages/bot/wrangler.toml
@@ -2,6 +2,8 @@ name = "discohook-bot"
 main = "./src/server.ts"
 compatibility_date = "2023-05-18"
 node_compat = true
+# DOES NOT 100% OVERLAP w/ node_compat! TODO switch
+# compatibility_flags = ["nodejs_compat"]
 services = [{ binding = "SITE", service = "discohook-site" }]
 
 [vars]
@@ -66,6 +68,11 @@ services = [{ binding = "SITE", service = "discohook-site-production" }]
 
 [env.production.placement]
 mode = "smart"
+
+[env.production.observability]
+enabled = true
+head_sampling_rate = 1
+logs.invocation_logs = false
 
 [env.production.durable_objects]
 bindings = [
