--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -18,6 +18,7 @@
     "generate-guide": "node scripts/generate-guide.js"
   },
   "dependencies": {
+    "@base-ui-components/react": "^1.0.0-alpha.6",
     "@cloudflare/kv-asset-handler": "^0.1.3",
     "@discordjs/rest": "^2.4.0",
     "@emoji-mart/data": "^1.1.2",
