--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -41,6 +41,7 @@
     "insert-text-at-cursor": "^0.3.0",
     "isbot": "^3.6.8",
     "jose": "^5.2.4",
+    "mime": "^4.0.6",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
