feat(site): switch to static assets

--- a/packages/site/wrangler.toml
+++ b/packages/site/wrangler.toml
@@ -44,8 +44,9 @@ new_classes = ["ShareLinks"]
 tag = "v4"
 new_classes = ["SessionManager"]
 
-[site]
-bucket = "./public"
+[assets]
+directory = "./public"
+binding = "ASSETS"
 
 [build]
 command = "npm run build"
