--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@base-ui-components/react": "^1.0.0-alpha.8",
     "@cloudflare/kv-asset-handler": "^0.4.0",
-    "@discordjs/rest": "^2.4.0",
+    "@discordjs/rest": "^2.5.0",
     "@emoji-mart/data": "^1.1.2",
     "@remix-run/cloudflare": "^2.4.0",
     "@remix-run/css-bundle": "^2.4.0",
@@ -30,7 +30,7 @@
     "@ungap/structured-clone": "^1.2.1",
     "chrono-node": "^2.7.5",
     "cron-parser": "discohook/cron-parser",
-    "discord-api-types": "^0.38.0-next-1740095508888",
+    "discord-api-types": "^0.38.1",
     "discord-bitflag": "^1.0.2",
     "discord-snowflake": "^2.0.0",
     "emoji-mart": "^5.5.2",
