refactor(site): on-demand translation assets

--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -37,7 +37,9 @@
     "front-matter": "^4.0.2",
     "he": "^1.2.0",
     "highlight.js": "^11.9.0",
-    "i18next": "^23.8.2",
+    "i18next": "^25.0.2",
+    "i18next-browser-languagedetector": "^8.0.5",
+    "i18next-http-backend": "^3.0.2",
     "insert-text-at-cursor": "^0.3.0",
     "isbot": "^3.6.8",
     "jose": "^5.2.4",
@@ -47,12 +49,13 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-emoji-search": "^2.2.26",
-    "react-i18next": "^14.0.5",
+    "react-i18next": "^15.5.1",
     "react-lazy-load-image-component": "^1.6.2",
     "react-modal": "^3.16.1",
     "react-select": "^5.8.0",
     "remix-auth-discord": "discohook/remix-auth-discord",
     "remix-auth-guilded": "^1.0.1",
+    "remix-i18next": "6.4.1",
     "remix-utils": "^7.6.0",
     "robots-parser": "^3.0.1",
     "tailwind-merge": "^2.2.0",
