--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -9,7 +9,7 @@
     "build": "remix build",
     "deploy": "wrangler deploy --env=production --minify",
     "deploy-preview": "wrangler deploy --env=preview --minify",
-    "dev": "remix dev --manual -c \"npm start\"",
+    "dev": "remix dev -c \"npm start\"",
     "start": "wrangler dev ./build/index.js --ip=0.0.0.0 --port=8788 --persist-to=../../persistence",
     "typecheck": "tsc",
     "generate-help": "node scripts/generate-help.js",
