--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -18,7 +18,7 @@
     "generate-guide": "node scripts/generate-guide.js"
   },
   "dependencies": {
-    "@base-ui-components/react": "^1.0.0-alpha.8",
+    "@base-ui-components/react": "^1.0.0-beta.3",
     "@cloudflare/kv-asset-handler": "^0.4.0",
     "@discordjs/rest": "^2.5.0",
     "@emoji-mart/data": "^1.1.2",
@@ -59,8 +59,8 @@
     "tailwind-merge": "^2.2.0",
     "tif-snowflake": "discohook/snowflake",
     "ua-parser-js": "^1.0.38",
-    "zod": "^3.22.4",
-    "zodix": "^0.4.4"
+    "zod": "^4.1.5",
+    "zodix": "npm:@coji/zodix@^0.5.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240405.0",
