--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -17,8 +17,8 @@
     "json-bigint": "^1.0.0",
     "postgres": "^3.4.5",
     "tif-snowflake": "discohook/snowflake",
-    "zod": "^3.23.8",
-    "zodix": "^0.4.4"
+    "zod": "^4.1.5",
+    "zodix": "npm:@coji/zodix@^0.5.0"
   },
   "devDependencies": {
     "@discordjs/rest": "^2.5.0",
