chore(bot-rw): up to speed

--- a/packages/bot-rw/package.json
+++ b/packages/bot-rw/package.json
@@ -5,28 +5,32 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "send-help": "bun scripts/send-help.ts",
+    "config:shards": "bun scripts/config.ts",
+    "config:shardless": "bun scripts/config.ts --shardless",
+    "getshard": "bun scripts/getshard.ts",
     "build": "tsc",
     "check": "biome check .",
     "format": "biome format . --write",
-    "config:shards": "bun scripts/config.ts",
-    "config:shardless": "bun scripts/config.ts --shardless",
     "deploy": "bun src/deploy.ts",
     "dev": "ENVIRONMENT=development bun --watch src/bot.ts",
     "start": "bun src/bot.ts"
   },
   "dependencies": {
-    "@discordjs/builders": "^1.11.2",
-    "@discordjs/core": "^2.2.1",
-    "@discordjs/rest": "^2.5.1",
+    "@discordjs/builders": "^1.13.0",
+    "@discordjs/core": "^2.3.0",
+    "@discordjs/rest": "^2.6.0",
     "@discordjs/ws": "^2.0.3",
+    "@isaacs/ttlcache": "^1.4.1",
     "@sapphire/bitfield": "^1.2.4",
     "argparse": "^2.0.1",
-    "discord-api-types": "^0.38.16",
+    "discord-api-types": "^0.38.32",
     "dotenv": "^16.3.1",
-    "drizzle-orm": "^0.33.0",
+    "drizzle-orm": "^0.44.5",
     "json-bigint": "^1.0.0",
     "keyv": "^5.0.1",
-    "postgres": "^3.4.4"
+    "postgres": "^3.4.4",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
@@ -36,7 +40,6 @@
     "@types/json-bigint": "^1.0.4",
     "@types/node": "^18.18.8",
     "tsx": "^4.20.3",
-    "typescript": "^5.2.2",
-    "zod": "^3.22.4"
+    "typescript": "^5.2.2"
   }
 }
