feat(store): better migration logging

--- a/packages/store/tsconfig.json
+++ b/packages/store/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "@tsconfig/node18/tsconfig.json",
   "compilerOptions": {
     "lib": ["es2017", "dom"],
-    "types": ["@cloudflare/workers-types/2023-03-01"]
+    "types": ["@cloudflare/workers-types/2023-03-01", "bun"]
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
