--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@discordjs/rest": "^2.5.0",
+    "@types/bun": "^1.3.9",
     "@types/json-bigint": "^1.0.4",
     "drizzle-kit": "^0.31.9",
     "typescript": "^5.3.3"
