--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -14,7 +14,7 @@
     "discord-api-types": "^0.38.32",
     "discord-snowflake": "^2.0.0",
     "drizzle-orm": "^0.45.1",
-    "json-bigint": "^1.0.0",
+    "json-with-bigint": "^3.5.3",
     "postgres": "^3.4.5",
     "tif-snowflake": "discohook/snowflake",
     "zod": "^4.1.5",
@@ -23,7 +23,6 @@
   "devDependencies": {
     "@discordjs/rest": "^2.5.0",
     "@types/bun": "^1.3.9",
-    "@types/json-bigint": "^1.0.4",
     "drizzle-kit": "^0.31.9",
     "typescript": "^5.3.3"
   }
