chore: disable import organization
was causing conflicts when saving files

--- a/biome.json
+++ b/biome.json
@@ -16,7 +16,7 @@
       "!packages/**/build/**/*"
     ]
   },
-  "assist": { "actions": { "source": { "organizeImports": "on" } } },
+  "assist": { "actions": { "source": { "organizeImports": "off" } } },
   "linter": {
     "enabled": true,
     "rules": {
